base/src/test/resources/failure/syntax/literate-unresolved.aya.txt
In file $FILE:2:0 ->

  1 | prim arcoe
  2 | --| test `arcoe`
      ^-------------------^
  3 | --| test `unresolved`

Error: The name `unresolved` is not defined in the current scope

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
